# ANARCII

./: .gitignore  .pre-commit-config.yaml  README.md  examples.ipynb  pyproject.toml  setup.py
notebook/: alternate_schemes.ipynb  conditioning.ipynb  examples.ipynb  finding_scfvs.ipynb  msgpack_outputs.ipynb  renumbering_pdb_files.ipynb
notebook/example_data/: monoclonals_clean.fasta  vnars_plabdab_nano.fasta
notebook/example_outputs/: my_numbered_seqs.json
src/anarcii/: __init__.py  cli.py
src/anarcii/classifier/: classifii.pt  classifii.py  classifii_utils.py
src/anarcii/classifii/: __init__.py  classifii.pt  utils.py
src/anarcii/inference/: inference_utils.py  model.py  model_loader.py  model_runner.py  utils.py  window_selector.py
src/anarcii/input_data_processing/: __init__.py  sequences.py  sequences_utils.py  tokeniser.py  utils.py
src/anarcii/models/antibody/: antibody_4_1_128_512.pt  antibody_4_2_128_512.pt  cos_4_2_128_512_gpu04_75M.pt  cos_4_2_128_512_gpu06_75M.pt  final_4_2_128_512_gpu06_75M_1.pt  final_4_2_128_512_gpu06_75M_2.pt  new_split_slim_4_1_128_512_gpu06_75M.pt  new_split_slim_4_2_128_512_gpu06_75M.pt
src/anarcii/models/antibody/attic/: pdb25_vnar397.pt  shark_397.pt
src/anarcii/models/antibody/backup/: antibody_4_1_128_512.json  antibody_4_1_128_512.pt  antibody_4_2_128_512.json  antibody_4_2_128_512.pt
src/anarcii/models/shark/: shark_4_2_128_512.pt
src/anarcii/models/shark/attic/: shark_4_2_128_512.pt
src/anarcii/models/tcr/: fine_tcr_4_1_128_512_gpu06.pt  fine_tcr_4_2_128_512_gpu06.pt  tcr_4_1_128_512.json  tcr_4_1_128_512.pt  tcr_4_1_128_512_gpu06.pt  tcr_4_2_128_512.json  tcr_4_2_128_512.pt
src/anarcii/output_data_processing/: __init__.py  convert_to_legacy_format.py  csv_cols_for_ben.py  list_to.py  scheme_specific_function.py  schemes.py  schemes_constants.py  schemes_utils.py
src/anarcii/pdb_process/: __init__.py  pdb.py  pdb_utils.py
src/anarcii/pipeline/: __init__.py  anarcii.py  anarcii_batch_process.py  anarcii_constants.py  anarcii_methods.py  anarcii_scfv_finder.py  anarcii_utils.py  batch_process.py  configuration_utils.py  methods.py  utils.py
src/anarcii/utils/: __init__.py
tests/: make_files_antibody.py  make_files_tcr.py  test_antibody.py  test_batch_process.py  test_cli.py  test_pdb.py  test_shark.py  test_tcr.py  test_unknown.py  test_window_cwc.py
tests/create_files/: make_files_antibody.py  make_files_cwc.py  make_files_tcr.py  make_files_unknown.py
tests/data/: antibody_aho_expected_1.txt  antibody_expected_1.txt  antibody_imgt_expected_1.txt  antibody_kabat_expected_1.txt  antibody_martin_expected_1.txt
tests/data/expected_data/: antibody_aho_expected_1.txt  antibody_chothia_expected_1.txt  antibody_expected_1.txt  antibody_imgt_expected_1.txt  antibody_kabat_expected_1.txt  antibody_martin_expected_1.txt  batch_expected_1.json  batch_expected_1.txt  cli_a.json  cli_b.json  cli_c.json  cli_d.json  shark_expected_1.json  shark_expected_1.txt  tcr_chothia_expected_1.json  tcr_chothia_expected_1.txt  tcr_expected_1.json  tcr_expected_1.txt  tcr_imgt_expected_1.json  tcr_imgt_expected_1.txt  tcr_kabat_expected_1.json  tcr_kabat_expected_1.txt  tcr_martin_expected_1.json  unknown_expected_1.json  unknown_expected_1.txt  window_expected_1.json  window_expected_1.txt
