[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anarcii"
dynamic = ["version"]
description = "A sequence numbering tool called ANARCII that..."
readme = "README.md"
license-files = ["LICENCE"]
authors = [
    { name = "Alexander Greenshields Watson", email = "opig@stats.ox.ac.uk" },
]
dependencies = [
    "numpy",
    "torch",
]

[project.scripts]
anarcii = "anarcii.cli:main"

[tool.hatch.version]
path = "src/anarcii/__init__.py"

[tool.ruff]
src = ["src", "tests"]
line-length = 88
lint.select = [
    "B",  # flake8-bugbear - https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C4", # flake8-comprehensions - https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "S",  # flake8-bandit - https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "E",  # pycodestyle errors - https://docs.astral.sh/ruff/rules/#error-e
    "F",  # pyflakes rules - https://docs.astral.sh/ruff/rules/#pyflakes-f
    "W",  # pycodestyle warnings - https://docs.astral.sh/ruff/rules/#warning-w
    "I",  # isort - https://docs.astral.sh/ruff/rules/#isort-i
    "UP", # pyupgrade - https://docs.astral.sh/ruff/rules/#pyupgrade-up
]
